--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2236,8 +2236,8 @@ span.banner-sub-heading-span {
 }
 
 .our-doctors-section .item .our-doctors-card {
-  background: rgba(232, 246, 255, 0.4);
-  border: 1px solid rgba(231, 237, 255, 0.5);
+  background: #e8f6ff66;
+  border: 1px solid #e7edff80;
   border-radius: 10px;
   padding: 10px;
 }
@@ -4482,7 +4482,7 @@ button.btn-book-custom {
 }
 
 .col-inner-items-inner-top-item {
-  padding-top: 7px;
+  padding-top: 6px;
   padding-left: 15px;
 }
 
