--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,10 @@ ul {
   list-style-type: none;
 }
 
+.disabled {
+  cursor: not-allowed !important;
+}
+
 /* Scrollbar Customization Start */
 html::-webkit-scrollbar {
   width: 10px;
@@ -4681,4 +4685,207 @@ button.btn-book-custom:focus-visible {
 
 .profile-card-social-icon {
   text-align: center;
+}
+
+.pr-subtitle {
+  font-size: 18px;
+  position: relative;
+  text-align: left;
+  color: #000;
+  font-weight: 600;
+}
+
+.pr-subtitle span {
+  color: #73042b;
+}
+
+.pr-subtitle::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 70%;
+  height: 1px;
+  background: #eee;
+  z-index: 1;
+}
+
+.pr-subtitle::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 50px;
+  height: 1px;
+  z-index: 2;
+  background: #73042b;
+}
+
+.comment {
+  padding: 0 0 30px 100px;
+  position: relative;
+  float: left;
+  margin-bottom: 40px;
+  width: 100%;
+  border-bottom: 1px solid #eee;
+}
+
+.comment-author {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  width: 80px;
+  height: 80px;
+}
+
+.comment-author::before {
+  content: "";
+  position: absolute;
+  right: -14px;
+  top: 20px;
+  width: 8px;
+  height: 8px;
+  border-left: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  transform: rotate(45deg);
+  background: #ededed;
+  z-index: 10;
+}
+
+.comment-body {
+  float: left;
+  width: 100%;
+  position: relative;
+  padding: 25px 30px;
+  background: #ededed;
+  border-radius: 2px;
+  border: 1px solid #eee;
+}
+
+.comment-body h4 {
+  text-align: left;
+  float: left;
+  font-size: 15px;
+  font-weight: 600;
+  color: #666;
+  margin-bottom: 15px;
+}
+
+/* .box-widget-menu-btn {
+  position: absolute;
+  right: 30px;
+  top: 25px;
+  cursor: pointer;
+  z-index: 20;
+  font-size: 16px;
+  color: #73042b;
+}
+
+.show-more-tooltip {
+  background: #fff;
+  top: 60px;
+  position: absolute;
+  right: 0;
+  width: 190px;
+  margin-top: 30px;
+  z-index: 20;
+  border: 1px solid #eee;
+  overflow: hidden;
+  padding: 5px 10px;
+  border-radius: 4px;
+  transition: all 300ms linear;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 0 5px 5px rgb(0 0 0 / 6%);
+}
+
+.show-more-tooltip a {
+  display: block;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
+  font-size: 11px;
+  color: #000;
+  font-weight: 600;
+  position: relative;
+}
+
+.show-more-tooltip a:last-child {
+  border-bottom: 0;
+} */
+
+.comment-body p {
+  text-align: justify;
+  font-size: 11px;
+  line-height: 24px;
+  padding-bottom: 10px;
+  font-weight: 500;
+  color: #5e646a;
+}
+
+.comment-reply-link {
+  float: right;
+  padding: 8px 20px;
+  background: #292929;
+  font-weight: 500;
+  font-size: 11px;
+  margin-top: 10px;
+  color: #fff;
+  border-radius: 2px;
+}
+
+.comment-meta {
+  float: left;
+  top: 20px;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 10px;
+  color: #000;
+  font-weight: 500;
+}
+
+.comment-body-dec {
+  position: absolute;
+  bottom: 40px;
+  right: 150px;
+  left: 180px;
+  height: 1px;
+  background: #d9d9d9;
+}
+
+.comment-reply {
+  float: right;
+  width: calc(100% - 90px);
+}
+
+.comment-reply::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -60px;
+  width: 40px;
+  height: 40px;
+  border-left: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
+.pr-subtitle-add {
+  font-size: 18px;
+  position: relative;
+  text-align: left;
+  color: #000;
+  font-weight: 600;
+}
+
+.custom-comm-btn {
+  padding: 18px 30px;
+  border: none;
+  cursor: pointer;
+  background: #73042b;
+  color: white;
+}
+
+.custom-comm-btn:hover {
+  background: black;
+  color: white;
 }
